vlib/v/checker/tests/mul_op_wrong_right_type_err_d.vv
import math
import math.complex as cmplx

fn main() {
	c1 := cmplx.complex(1,-2)
	c2 := 2.0 * c1
	println(c2)
}
